Made the mechanics more modular

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -124,3 +124,12 @@ span#animElem0 {
     text-align: center;
     font-size: 64px;
 }
+
+#wrapper {
+  overflow: hidden;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+}
